--- a/BEATS/index.html
+++ b/BEATS/index.html
@@ -19,7 +19,7 @@
       <!-- Navbar -->
       <div class="nav container">
         <!-- Logo -->
-        <a href="#" class="logo">
+        <a href="/index.html" class="logo">
           <img src="img/logo.png" alt="">
         </a>
         <!-- Menu Icon -->
@@ -177,10 +177,10 @@
 
   </div>
 
-    <!-- Scroll Reveal Animation -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- Link To JS -->
-     <script src="main.js"></script>
+  <!-- Scroll Reveal Animation -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <!-- Link To JS -->
+  <script src="main.js"></script>
 
 </body>
 
