--- a/BOSE/index.html
+++ b/BOSE/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" />
     <!-- A library that is used to create icons. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- Used to load the fonts from the google fonts. -->
@@ -14,17 +15,18 @@
     <!-- A library that is used to create a carousel. -->
     <link rel="stylesheet" href="//unpkg.com/a11y-slider@latest/dist/a11y-slider.css" />
     <script src="//unpkg.com/a11y-slider@latest/dist/a11y-slider.js"></script>
-   <!-- A library that is used to create a carousel. -->
+    <!-- A library that is used to create a carousel. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>headphones Website</title>
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="nav-wrapper">
-                <a href="#" class="logo"><img src="../imagebose/logo.png" alt=""></a>
+                <a href="/index.html" class="logo"><img src="../imagebose/logo.png" alt=""></a>
                 <button class="toggle-btn">
                     <i class="fa-solid fa-angle-right | fs-large"></i>
 
@@ -46,7 +48,7 @@
                     </div>
                 </nav>
             </div>
-            
+
             <!-- Hero part -->
             <div class="hero">
                 <div class="even-column">
@@ -149,7 +151,8 @@
                     <img src="../imagebose/person.png" alt="">
                     <div>
                         <h2 class="fs-larger fw-bold Text-secoundary">Perfect sound immersive world</h2>
-                        <p class="fs-regular fw-regular text-secoundary">QuietComfort 35 wireless headphones II are engineered with renowned noise cancellation. 
+                        <p class="fs-regular fw-regular text-secoundary">QuietComfort 35 wireless headphones II are
+                            engineered with renowned noise cancellation.
                             With the Google Assistant and Amazon Alexa built-in,
                             you have instant access to millions of songs, playlists and more—hands free.
                         </p>
@@ -165,8 +168,10 @@
                 <div class="even-row">
                     <div>
                         <h2 class="fs-larger fw-bold text-primary-100">Premium design</h2>
-                        <p class="fs-regular fw-regular text-secoundary">When you want to take your music anywhere, you need headphones built to keep up. 
-                            With impact-resistant materials, glass-filled nylon, and corrosion-resistant stainless steel,
+                        <p class="fs-regular fw-regular text-secoundary">When you want to take your music anywhere, you
+                            need headphones built to keep up.
+                            With impact-resistant materials, glass-filled nylon, and corrosion-resistant stainless
+                            steel,
                             they’re engineered to survive life on the go.
                         </p>
                     </div>
@@ -181,9 +186,11 @@
                 <div class="even-column">
                     <div>
                         <h2 class="fs-larger fw-bold text-secoundary">Up to 20 hours battery life</h2>
-                        <p class="fs-regular fw-regular text-secoundary">Enjoy up to 20 hours of listening, enough time to pore through this entire playlist. So you can keep the music — 
-                            or the quiet — going all day long. And when it finally runs down, a quick 15-minute charge gives you another 2.5 hours.
-                         </p>
+                        <p class="fs-regular fw-regular text-secoundary">Enjoy up to 20 hours of listening, enough time
+                            to pore through this entire playlist. So you can keep the music —
+                            or the quiet — going all day long. And when it finally runs down, a quick 15-minute charge
+                            gives you another 2.5 hours.
+                        </p>
                     </div>
                     <img src="../imagebose/person2.png" alt="">
                 </div>
@@ -203,47 +210,50 @@
                         <div class="product-card">
                             <img src="../imagebose/headphone1.png" alt="">
                             <div>
-                                <h4 class="fw-bold fs-medium text-primary-100">QuietComfort 35 wireless headphones II</h3>
-                                <b class="fw-regular fs-regular text-secoundary">$499.9</b>
+                                <h4 class="fw-bold fs-medium text-primary-100">QuietComfort 35 wireless headphones II
+                                    </h3>
+                                    <b class="fw-regular fs-regular text-secoundary">$499.9</b>
                             </div>
                         </div>
 
-                         <!-- card-02 -->
-                         <div class="product-card">
+                        <!-- card-02 -->
+                        <div class="product-card">
                             <img src="../imagebose//headphones3.png" alt="">
                             <div>
                                 <h4 class="fw-bold fs-medium text-primary-100">Bose on-ear wireless headphones</h3>
-                                <b class="fw-regular fs-regular text-secoundary">$499.9</b>
+                                    <b class="fw-regular fs-regular text-secoundary">$499.9</b>
                             </div>
                         </div>
 
 
-                         <!-- card-03 -->
-                         <div class="product-card">
+                        <!-- card-03 -->
+                        <div class="product-card">
                             <img src="../imagebose/headphones4.png" alt="">
                             <div>
-                                <h4 class="fw-bold fs-medium text-primary-100">QuietComfort 35 wireless headphones II</h3>
-                                <b class="fw-regular fs-regular text-secoundary">$499.9</b>
+                                <h4 class="fw-bold fs-medium text-primary-100">QuietComfort 35 wireless headphones II
+                                    </h3>
+                                    <b class="fw-regular fs-regular text-secoundary">$499.9</b>
                             </div>
                         </div>
 
 
-                         <!-- card-04 -->
-                         <div class="product-card">
+                        <!-- card-04 -->
+                        <div class="product-card">
                             <img src="../imagebose/headphones5.png" alt="">
                             <div>
                                 <h4 class="fw-bold fs-medium text-primary-100">Bose Noise Cancelling Headphones 700</h3>
-                                <b class="fw-regular fs-regular text-secoundary">$499.9</b>
+                                    <b class="fw-regular fs-regular text-secoundary">$499.9</b>
                             </div>
                         </div>
 
 
-                         <!-- card-05 -->
-                         <div class="product-card">
+                        <!-- card-05 -->
+                        <div class="product-card">
                             <img src="../imagebose/headphones6.png" alt="">
                             <div>
-                                <h4 class="fw-bold fs-medium text-primary-100">QuietComfort 35 wireless headphones II</h3>
-                                <b class="fw-regular fs-regular text-secoundary">$499.9</b>
+                                <h4 class="fw-bold fs-medium text-primary-100">QuietComfort 35 wireless headphones II
+                                    </h3>
+                                    <b class="fw-regular fs-regular text-secoundary">$499.9</b>
                             </div>
                         </div>
                     </div>
@@ -259,8 +269,8 @@
                     <img src="../imagebose/person3.png" alt="">
                     <div>
                         <h3 class="fs-xlarge fw-bold text-primary">Being first has its perks</h3>
-                        <p class="fs-regular fw-regular text-primary">Sign up to get more information about Bose, 
-                        exclusive first looks at promotions, new products and more.
+                        <p class="fs-regular fw-regular text-primary">Sign up to get more information about Bose,
+                            exclusive first looks at promotions, new products and more.
                         </p>
                         <form action="">
                             <input type="email" placeholder="Your e-mail here">
@@ -285,8 +295,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
-
-
-
-
