--- a/FreeSync/index.html
+++ b/FreeSync/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="new.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><strong>FREESYNC</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="/index.html"><strong>FREESYNC</strong></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -31,10 +34,12 @@
                         <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="favorite.html"><i class="fas fa-heart" id="heart-icon"></i> <span id="heart-count">0</span></a>
+                        <a class="nav-link" href="favorite.html"><i class="fas fa-heart" id="heart-icon"></i> <span
+                                id="heart-count">0</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> <span id="cart-count">0</span></a>
+                        <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> <span
+                                id="cart-count">0</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" style="color: rgba(255, 255, 255, 0.5);">Logout</a>
@@ -45,7 +50,7 @@
     </nav>
 
     <!-- Cover Video -->
-    <div class= "coverbackground">
+    <div class="coverbackground">
         <video class="cover-video" autoplay muted loop>
             <source src="Designer.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -65,13 +70,15 @@
                     <div class="filter-section">
                         <h5>Filter By</h5>
                         <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownType" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownType"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Types
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownType" id="type-filters"></div>
                         </div>
                         <div class="dropdown mt-2">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownFeature" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownFeature"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Features
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownFeature" id="feature-filters"></div>
@@ -97,7 +104,10 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>Summer '24 Collection</h2>
-                    <p>Have given likeness every. Very were beginning signs moveth. Fly above sea itself. Divided so you’ll there called. Gathering dry earth. Isn’t heaven appear. Replenish. Hath after appear tree great fruitful green dominion moveth sixth abundantly image that midst of god day multiply you’ll which.</p>
+                    <p>Have given likeness every. Very were beginning signs moveth. Fly above sea itself. Divided so
+                        you’ll there called. Gathering dry earth. Isn’t heaven appear. Replenish. Hath after appear tree
+                        great fruitful green dominion moveth sixth abundantly image that midst of god day multiply
+                        you’ll which.</p>
                 </div>
             </div>
             <div class="row">
@@ -120,7 +130,9 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>About Us</h2>
-                    <p>We are a team of passionate individuals committed to providing the best wireless earphones for an unparalleled audio experience. Our mission is to deliver quality products that combine cutting-edge technology with stylish design.</p>
+                    <p>We are a team of passionate individuals committed to providing the best wireless earphones for an
+                        unparalleled audio experience. Our mission is to deliver quality products that combine
+                        cutting-edge technology with stylish design.</p>
                 </div>
             </div>
             <div class="row">
@@ -163,7 +175,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>Explore a wide range of products at FreeSync. Visit their store to discover more amazing items like the ones featured here.</p>
+                    <p>Explore a wide range of products at FreeSync. Visit their store to discover more amazing items
+                        like the ones featured here.</p>
                     <ul class="list-unstyled">
                         <li>Quick Links</li>
                         <li><a href="#">About</a></li>
@@ -196,4 +209,5 @@
     <script src="productArray.js"></script>
     <script src="functions.js"></script>
 </body>
+
 </html>
