--- a/Apple Cinema/store.html
+++ b/Apple Cinema/store.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="index.html" class="logo">Abel Cinema</a>
+    <a href="/index.html" class="logo">Abel Cinema</a>
     <ul class="nav">
       <li>
         <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
