--- a/JBL/Index.html
+++ b/JBL/Index.html
@@ -25,7 +25,7 @@
    <!--==================== HEADER ====================-->
    <header class="header" id="header">
       <nav class="nav container">
-         <a href="#" class="nav__logo">JBL | Abyssinians</a>
+         <a href="/index.html" class="nav__logo">JBL | Abyssinians</a>
 
          <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
