--- a/index2.html
+++ b/index2.html
@@ -14,9 +14,7 @@
 
     <!-- Run BEFORE page is finished loading -->
     <script src="scripts/auth.js"></script>
-    <script>
-        if (isLoggedIn() === true) window.location.replace("/posts");
-    </script>
+    
 </head>
 
 <body>
@@ -28,7 +26,7 @@
             <div class="container">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><svg height="45" viewBox="0 8 14 44" width="20"
+                        <a class="nav-link" href="index2.html"><svg height="45" viewBox="0 8 14 44" width="20"
                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="m13.0729 17.6825a3.61 3.61 0 0 0 -1.7248 3.0365 3.5132 3.5132 0 0 0 2.1379 3.2223 8.394 8.394 0 0 1 -1.0948 2.2618c-.6816.9812-1.3943 1.9623-2.4787 1.9623s-1.3633-.63-2.613-.63c-1.2187 0-1.6525.6507-2.644.6507s-1.6834-.9089-2.4787-2.0243a9.7842 9.7842 0 0 1 -1.6628-5.2776c0-3.0984 2.014-4.7405 3.9969-4.7405 1.0535 0 1.9314.6919 2.5924.6919.63 0 1.6112-.7333 2.8092-.7333a3.7579 3.7579 0 0 1 3.1604 1.5802zm-3.7284-2.8918a3.5615 3.5615 0 0 0 .8469-2.22 1.5353 1.5353 0 0 0 -.031-.32 3.5686 3.5686 0 0 0 -2.3445 1.2084 3.4629 3.4629 0 0 0 -.8779 2.1585 1.419 1.419 0 0 0 .031.2892 1.19 1.19 0 0 0 .2169.0207 3.0935 3.0935 0 0 0 2.1586-1.1368z">
@@ -160,7 +158,7 @@
                                             <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/mac/">Apple One</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item fs-5 fw-bold" href="/Apple Cinema/store.html">Apple Movies</a>
+                                            <a class="dropdown-item fs-5 fw-bold" href="/Apple Cinema/store">Apple Movies</a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/iphone/">Apple Music</a>
@@ -223,13 +221,7 @@
                             <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Support</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="registration.html"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-add" viewBox="0 0 16 16">
-                                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
-                                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
-                                </svg></a>
+                            <a class="nav-link" href="#" onclick="logout()">Logout</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="checkout.html"><svg height="44" viewBox="0 8 14 44" width="14" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
