--- a/Apple Cinema/store.html
+++ b/Apple Cinema/store.html
@@ -13,7 +13,7 @@
 <body>
   <header>
 
-    <a href="/index.html" class="logo">Abel Cinema</a>
+    <a href="/index.html" class="logo">Apple Movies</a>
     <ul class="nav">
       <li>
         <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
