--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
                                             <a class="dropdown-item fs-5 fw-bold" href="/appleVisionPro/index.html">Apple Vision Pro</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item fs-5 fw-bold mb-5" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                                            <a class="dropdown-item fs-5 fw-bold mb-5" href="/airtag/airtag.html">Apple Air Tag</a>
                                         </li>
                                     </div>
         
